nivasa-macros/tests/trybuild/schedule_interval_zero.rs
use nivasa_macros::interval;

struct Jobs;

impl Jobs {
    #[interval(0)]
    fn tick(&self) {}
}

fn main() {}
